# paste

./: package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/clipboard/: Cargo.toml
src-tauri/src/plugins/clipboard-rs/: README.md
src-tauri/src/plugins/clipboard/permissions/autogenerated/: reference.md
src-tauri/src/plugins/clipboard/permissions/schemas/: schema.json
src-tauri/src/plugins/clipboard/src/: commands.rs  lib.rs
src/components/: window-controls.tsx
src/components/clipboard/: clipboard-card.tsx  clipboard.tsx
src/hooks/: clipboard-list.ts  clipboard.ts
src/styles/: index.css
src/utils/: clipboard.ts  window.ts
