[package]
name = "tauri-plugin-clipboard"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-clipboard"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
clipboard-rs = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }
